--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,19 +8,19 @@
 
     <string name="fragment_1_name">Tasks for today</string>
 
-    <string name="activity_add_task">Add task</string>
-    <string name="activity_add_task_name">Name</string>
-    <string name="activity_add_task_date">Date</string>
-    <string name="activity_add_task_time_from">From</string>
-    <string name="activity_add_task_time_to">To</string>
-    <string name="activity_add_task_description">Description</string>
-    <string name="activity_add_task_location">Location</string>
-    <string name="activity_add_task_show_map">To show on the map</string>
-    <string name="activity_add_task_Importance">Importance:</string>
-    <string name="activity_add_task_snap">Snap contact</string>
-    <string name="activity_add_task_name_contact">Contact name</string>
-    <string name="activity_add_task_add_to_calendar">Add to calendar</string>
-    <string name="activity_add_task_save">Save</string>
+    <string name="add_task">Add task</string>
+    <string name="add_task_name">Name</string>
+    <string name="add_task_date">Date</string>
+    <string name="add_task_time_from">From</string>
+    <string name="add_task_time_to">To</string>
+    <string name="add_task_description">Description</string>
+    <string name="add_task_location">Location</string>
+    <string name="add_task_show_map">To show on the map</string>
+    <string name="add_task_Importance">Importance:</string>
+    <string name="add_task_snap">Snap contact</string>
+    <string name="add_task_name_contact">Contact name</string>
+    <string name="add_task_add_to_calendar">Add to calendar</string>
+    <string name="add_task_save">Save</string>
 
     <string name="sunday">Sunday</string>
     <string name="monday">Monday</string>
@@ -49,4 +49,8 @@
         <item>Not important, but urgent</item>
         <item>Not important and not urgent</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="show_task">Show task</string>
+    <string name="selection_calendar">Select a calendar</string>
 </resources>
