--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="show_task">Show task</string>
     <string name="selection_calendar">Select a calendar</string>
+    <string name="to_edit">Edit</string>
+    <string name="edit_task">Edit task</string>
 </resources>
